shlr/rizin-shell-parser/grammar.js
    commands: ($) =>
      choice(
        seq(),
        seq(repeat($.cmd_delimiter)),
        seq(repeat($.cmd_delimiter), $._command, repeat(seq($.cmd_delimiter, optional($._command))))
      ),
    _commands_singleline: ($) =>
      prec(
        1,
        seq(
          repeat($.cmd_delimiter_singleline),
          $._command,
          repeat(seq($.cmd_delimiter_singleline, optional($._command)))
        )
      ),

    _command: ($) => choice($.redirect_command, $._simple_command),

    _simple_command: ($) =>
      choice(
        $.help_command,
        $.repeat_command,
        $.arged_command,
        $.number_command,
        $._tmp_command,
        $._iter_command,
        $._pipe_command,
        $.grep_command,
        $.legacy_quoted_command,
        $._pf_commands
      ),

    grep_command: ($) => seq(field("command", $._simple_command), "~", field("specifier", $.grep_specifier)),
    // FIXME: improve parser for grep specifier
    // grep_specifier_identifier also includes ~ because r2 does not support nested grep commands yet
    grep_specifier_identifier: ($) => token(seq(repeat1(choice(/[^\n\r;#@>|`$()]+/, /\\./, /\$[^(\r\n;#>|`]/)))),
    grep_specifier: ($) =>
      prec.left(
        choice(
          seq(
            repeat1(choice($.grep_specifier_identifier, $.cmd_substitution_arg)),
            optional(alias(/[$]+/, $.grep_specifier_identifier))
          ),
          alias(/[$]+/, $.grep_specifier_identifier)
        )
      ),

    tmp_seek_command: ($) => prec.right(1, seq($._simple_command, "@", $.args)),
    help_command: ($) =>
      prec.left(
        1,
        choice(
          field("command", alias($.question_mark_identifier, $.cmd_identifier)),
          field("command", alias($._help_command, $.cmd_identifier))
        )
      ),
    arged_command: ($) =>
      choice(
        $._simple_arged_command,
        $._math_arged_command,
        $._pointer_arged_command,
        $._macro_arged_command,
        $._system_command,
        $._interpret_command,
        $._env_command,
        $._pf_arged_command,
        $._last_command,
        $._simple_arged_command_question
      ),

    _simple_arged_command_question: ($) =>
      prec.left(1, seq(field("command", alias($._help_command, $.cmd_identifier)), field("args", $.args))),

    _simple_arged_command: ($) =>
      prec.left(1, seq(field("command", $.cmd_identifier), field("args", optional($.args)))),
    _math_arged_command: ($) =>
      prec.left(1, seq(field("command", alias($.question_mark_identifier, $.cmd_identifier)), field("args", $.args))),
    _pointer_arged_command: ($) =>
      prec.left(
        1,
        seq(
          field("command", alias($.pointer_identifier, $.cmd_identifier)),
          field("args", alias($.eq_sep_args, $.args))
        )
      ),
    _macro_arged_command: ($) =>
      prec.left(
        1,
        seq(field("command", alias($.macro_identifier, $.cmd_identifier)), field("args", optional($.macro_args)))
      ),
    _system_command: ($) => prec.left(1, seq(field("command", $.system_identifier), optional(field("args", $.args)))),
    _interpret_command: ($) =>
      prec.left(
        1,
        choice(
          seq(field("command", alias(".", $.cmd_identifier)), field("args", $._simple_command)),
          seq(field("command", alias(/\.[\.:\-*]+/, $.cmd_identifier)), /[ ]+/, field("args", optional($.args))),
          seq(field("command", alias(/\.[ ]+/, $.cmd_identifier)), field("args", optional($.args))),
          seq(field("command", alias(".!", $.cmd_identifier)), field("args", $.interpret_arg)),
          seq(field("command", alias(".(", $.cmd_identifier)), field("args", $.macro_call_content)),
          seq(field("command", alias($._interpret_search_identifier, $.cmd_identifier)), field("args", $.args)),
          prec.right(1, seq(field("args", $._simple_command), field("command", "|.")))
        )
      ),
    _pf_arged_command: ($) =>
      choice(
        seq(field("command", alias($.pf_dot_cmd_identifier, $.cmd_identifier))),
        seq(field("command", alias("pfo", $.cmd_identifier)), field("args", $.args))
      ),
    _env_command: ($) =>
      prec.left(
        seq(
          field("command", alias($._env_command_identifier, $.cmd_identifier)),
          field("args", optional(alias($.eq_sep_args, $.args)))
        )
      ),
    _last_command: ($) => seq(field("command", alias($.last_command_identifier, $.cmd_identifier))),

    interpret_arg: ($) => $._any_command,
    system_identifier: ($) => /![\*!-=]*/,
    macro_call_content: ($) => prec.left(seq(optional($.args), ")")),
    macro_call_full_content: ($) => seq("(", $.macro_call_content),
    macro_content: ($) =>
      prec(
        1,
        seq(field("name", $.arg), optional($.args), optional(seq(";", $._command, repeat(seq(";", $._command)))), ")")
      ),
    macro_args: ($) => seq($.macro_content, optional(seq(optional($.macro_call_full_content)))),

    _arg: ($) =>
      choice(
        $.arg_identifier,
        $.double_quoted_arg,
        $.single_quoted_arg,
        $.cmd_substitution_arg,
        alias($._arg_with_paren, $.args),
        alias(",", $.arg_identifier)
      ),
    arg: ($) => choice($._arg, $.concatenation),
    args: ($) => prec.left(repeat1($.arg)),
    // TODO: this should accept a quoted_arg and a cmd_substitution_arg as well
    _any_command: ($) => /[^\r\n;~|]+/,

    arg_identifier: ($) => argIdentifier(ARG_IDENTIFIER_BASE),
    cmd_substitution_arg: ($) =>
      choice(seq("$(", $._commands_singleline, ")"), prec(1, seq("`", $._commands_singleline, "`"))),
    concatenation: ($) => prec(-1, seq($._arg, repeat1(prec(-1, seq($._concat, $._arg))))),

    table_args: ($) => repeat1(seq(
      $._table_sep,
      alias($.spec_arg_identifier, $.arg_identifier),
    )),
    table_spec: ($) => seq(
      field("table_col", alias($.spec_arg_identifier, $.arg_identifier)),
      $._table_sep,
      field("table_op", alias($.spec_arg_identifier, $.arg_identifier)),
      optional($.table_args),
    ),
    specifiers: ($) => seq(
      repeat1(seq(
        $._spec_sep,
        $.table_spec,
      )),
      optional(seq(
        $._spec_sep,
        alias($.spec_arg_identifier, $.arg_identifier),
      )),
    ),
    cmd_identifier: ($) => seq(
      field("id", $._cmd_identifier),
      field("extra", optional($.specifiers)),
    )
  },
});

function noneOf(...characters) {
  const negatedString = characters.map((c) => (c == "\\" ? "\\\\" : c)).join("");
  return new RegExp("[^" + negatedString + "]");
}

function argIdentifier(baseCharacters) {
  return choice(token(repeat1(baseCharacters)), "$");
}
